--- a/index.html
+++ b/index.html
@@ -12,21 +12,10 @@
 </head>
 <body>
     <div class="flex gap-1">
-        <a href="#" class="btn btn-sm">Label</a>
-        <span href="#" class="btn btn-lg ">Label</span>
-        <button href="#" class="btn btn-md ">Label</button>
-    </div>
-
-    <div class="flex gap-1">
-        <a 
-        aria-label="Label"
-        href="#" class="btn btn-sm"></a>
-        <span 
-        aria-label="Label"
-        href="#" class="btn btn-lg "></span>
-        <button 
-        aria-label="Label"
-        href="#" class="btn btn-md "></button>
+        <a href="#" class="social" aria-label="tiktok"></a>
+        <a href="#" class="social" aria-label="instagram"></a>
+        <a href="#" class="social" aria-label="twitter"></a>
+        <a href="#" class="social" aria-label="discord"></a>
     </div>
 </body>
 </html>
