--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    <section id="price">\
+    <section id="price">
         <div class="container py-xl">
             <header>
                 <strong>Planos e preços</strong>
@@ -160,6 +160,30 @@
                     </ul>
                     <small>Mínimo de 4 pessoas no plano família.</small>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="download">
+        <div class="container py-xl">
+            <div class="card px-lg even-columns items-center">
+                <div>
+                    <header>
+                        <strong>Download</strong>
+                        <h2>Bora cantar?</h2>
+                    </header>
+                    <p>Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis!</p>
+                    <div class="buttons flex gap-1">
+                        <a href="#">
+                            <img src="assets/button-apple-store.svg" alt="Baixar da Apple Store">
+                        </a>
+                        <a href="#">
+                            <img src="assets/button-google-store.svg" alt="Baixar da Play Store">
+                        </a>
+                    </div>
+                </div>
+    
+                <img src="assets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png" alt="">
             </div>
         </div>
     </section>
